crates/nirvash-macros/tests/fixtures/derive_signature_invalid_len.stderr
error: #[finite_model(len = ...)] is only supported on Vec<T> fields
 --> tests/fixtures/derive_signature_invalid_len.rs:6:12
  |
6 |     ready: bool,
  |            ^^^^
