crates/nirvash-macros/tests/fixtures/derive_signature_invalid_len.rs
use nirvash_macros::FiniteModelDomain;

#[derive(Clone, Debug, PartialEq, Eq, FiniteModelDomain)]
struct InvalidLen {
    #[finite_model(len = "0..=2")]
    ready: bool,
}

fn main() {}
